--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -646,7 +646,7 @@ header .label-links,
       position: absolute;
       top: 4.6875rem;
       left: 0;
-      background-color: rgb(245, 245, 245);
+      color: var(--primary-background-color);
       text-align: right;
       width: 100%;
       height: 0;
@@ -664,7 +664,7 @@ header .label-links,
 
     header .nav-background nav .links .link {
       margin: 0; /* Reduzindo a margem entre os itens do menu */
-      background-color: rgb(245, 245, 245);
+      color: var(--primmary-text-color);
     }
 
     header .hamburguer {
