--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -497,7 +497,7 @@ header .label-links,
       position: absolute;
       top: 5.6875rem;
       left: 0;
-      background-color: rgb(245, 245, 245);
+      background-color: var(--primary-background-color);
       text-align: right;
       width: 100%;
       height: 0;
@@ -515,7 +515,7 @@ header .label-links,
 
     header .nav-background nav .links .link {
       margin: 0rem; /* Reduzindo a margem entre os itens do menu */
-      background-color: rgb(245, 245, 245);
+      color: var(--primary-text-color);
     }
 
     header .hamburguer {
